[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/menus/NextLevelPopup.gd" type="Script" id=1]

[node name="TestPopup" type="Popup"]
visible = true
margin_right = 601.0
margin_bottom = 113.0
rect_scale = Vector2( 1.25, 1.25 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 100.0
margin_top = 58.0
margin_right = 600.0
margin_bottom = 108.0

[node name="Label" type="Label" parent="."]
margin_left = 100.0
margin_top = 65.6
margin_right = 350.0
margin_bottom = 79.6
rect_scale = Vector2( 2, 2 )
text = "Press any button to start"
align = 1

[node name="Panel2" type="Panel" parent="."]
margin_left = 100.0
margin_top = -90.4
margin_right = 600.0
margin_bottom = 10.6

[node name="Label2" type="Label" parent="."]
margin_left = 100.0
margin_top = -85.2
margin_right = 350.0
margin_bottom = -37.2
rect_scale = Vector2( 2, 2 )
text = "This is a practice level
Arrow keys to move
Space to jump"
align = 1

[node name="ObjectivePanel" type="Panel" parent="."]
margin_left = 100.0
margin_top = 9.60002
margin_right = 600.0
margin_bottom = 59.6

[node name="ObjectiveLabel" type="Label" parent="."]
margin_left = 100.0
margin_top = 24.0
margin_right = 350.0
margin_bottom = 38.0
rect_scale = Vector2( 2, 2 )
text = "Objective: Hit the bell"
align = 1

[node name="NextLevelButton" type="Button" parent="."]
visible = false
margin_left = 204.0
margin_top = 45.6
margin_right = 284.0
margin_bottom = 85.6
rect_scale = Vector2( 2, 2 )
text = "Next Level"

[connection signal="pressed" from="NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
